# cairo-hints

./: .gitignore  Cargo.toml  README.md  rebuild.ps1  rust-toolchain
cairo-hints/: Cargo.toml
cairo-hints/scarb-hints-build/: main.rs
cairo-hints/scarb-hints-generate/: main.rs
cairo-hints/scarb-hints-lib/: lib.rs  serialization.rs  utils.rs
cairo-hints/scarb-hints-new/: fsx.rs  main.rs  new.rs  new_cairo.rs  new_js.rs  new_python.rs  new_rust.rs  new_ts.rs  restricted_names.rs  templates.rs
cairo-hints/scarb-hints-new/templates/python/: .gitignore.hbs  .pre-commit-config.hbs  Dockerfile.hbs  README.hbs  cloudbuild.hbs  main.hbs  requirements.hbs  run-service.hbs
cairo-hints/scarb-hints-run/: args.rs  deserialization.rs  main.rs  serialization.rs
cairo-hints/scarb-hints-test/: main.rs
cairo-hints/scarb-utils/: lib.rs
cairo-lang-hints-test-runner/: Cargo.toml
cairo-lang-hints-test-runner/src/: lib.rs  test.rs
cairo-lang-hints-test-runner/test_data/: cairo_project.toml  lib.cairo
cairo-oracle/: Cargo.toml
cairo-oracle-hint-processor/: Cargo.toml
cairo-oracle-hint-processor/src/: cairo_run.rs  hint_processor_utils.rs  lib.rs  rpc_hint_processor.rs
cairo-oracle-hint-processor/src/rpc_1_hint_processor/: mod.rs
cairo-oracle-hint-processor/src/rpc_hint_processor/: mod.rs
cairo-oracle/src/: lib.rs
cairo-proto-build/: Cargo.toml
cairo-proto-build/src/: ast.rs  code_generator.rs  lib.rs  message_graph.rs  path.rs
cairo-proto-serde/: Cargo.toml
cairo-proto-serde/src/: configuration.rs  lib.rs
documentation/: Reference.md  Tutorial.md
examples/hints_poc/: README.md
examples/hints_poc/cairo/: Scarb.toml
examples/hints_poc/cairo/src/: lib.cairo  oracle.cairo  oracle.cairo.json  shirts.cairo  shirts.cairo.json
examples/hints_poc/proto/: field.proto  oracle.proto
examples/hints_poc/rust/: Cargo.toml  build.rs
examples/hints_poc/rust/src/: main.rs
examples/js_sqrt/: README.md  Scarb.toml  servers.json
examples/js_sqrt/js/: package-lock.json  package.json  server.js
examples/js_sqrt/src/: lib.cairo  oracle.cairo
examples/rust_complex/: README.md  Scarb.toml  servers.json
examples/rust_complex/proto/: oracle.proto
examples/rust_complex/rust/: Cargo.toml  build.rs
examples/rust_complex/rust/src/: main.rs  oracle.rs  shirts.rs
examples/rust_complex/src/: lib.cairo  oracle.cairo  shirts.cairo
examples/rust_sqrt/: README.md  Scarb.toml  servers.json
examples/rust_sqrt/proto/: oracle.proto
examples/rust_sqrt/rust/: Cargo.toml  build.rs
examples/rust_sqrt/rust/src/: main.rs  oracle.rs
examples/rust_sqrt/src/: lib.cairo  oracle.cairo
scarb-hints-gen-oracle/: Cargo.toml
scarb-hints-gen-oracle/src/: main.rs
scarb-hints-new/: Cargo.toml
scarb-hints-run/: Cargo.toml
scarb-hints-run/src/: main.rs
scarb-hints-test/: Cargo.toml
scarb-hints-test/src/: main.rs
