[workspace]
resolver = "2"
members = [
    "cairo-lang-hints-test-runner",
    "cairo-proto-serde",
    "cairo-proto-build",
    "cairo-oracle-hint-processor",
    "scarb-hints-new",
    "scarb-hints-gen-oracle",
    "scarb-hints-run",
    "scarb-hints-test",
]
exclude = [
    "examples/hints_poc/rust"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
