[workspace]
resolver = "2"
members = [
    "cairo-lang-hints-test-runner",
    "cairo-proto-serde",
    "cairo-proto-build",
    "cairo-oracle-hint-processor",
    "cairo-hints",
]
exclude = [
    "examples/rust_complex/rust"
]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.79"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
bytes = "1.5.0"
cairo-lang-casm = "=2.4.2"
cairo-lang-compiler = { version = "=2.4.2" }
cairo-lang-filesystem = { version = "=2.4.2" }
cairo-lang-runner = { version = "=2.4.2" }
cairo-lang-sierra = { version = "=2.4.2" }
cairo-lang-sierra-ap-change = { version = "2.3.1", default-features = false }
cairo-lang-sierra-gas = { version = "2.3.1", default-features = false }
cairo-lang-sierra-to-casm = { version = "=2.4.2" }
cairo-lang-sierra-type-size = { version = "=2.4.2", default-features = false }
cairo-lang-starknet = { version = "=2.4.2" }
cairo-lang-hints-test-runner = { path = "./cairo-lang-hints-test-runner" }
cairo-lang-test-plugin = { version = "=2.4.2" }
cairo-lang-utils = { version = "=2.4.2" }
cairo-oracle-hint-processor = { path = "./cairo-oracle-hint-processor" }
cairo-proto-build = { path = "./cairo-proto-build", default-features = false }
cairo-proto-serde = { path = "./cairo-proto-serde" }
# cairo-vm = { version = "0.9.1", features = ["cairo-1-hints"] }
cairo-felt = "=0.8.7"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "1a78237b32c9489e120c4c920bff548bf2a83b89", features = ["cairo-1-hints"] }
camino = "1.1.6"
clap = "4.4.18"
colored = "2.1.0"
dunce = "1"
env_logger = "0.10.1"
heck = "0.4.1"
indoc = "2.0.4"
itertools = "0.12.0"
log = "0.4.20"
multimap = "0.10.0"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
once_cell = "1"
petgraph = "0.6.4"
prost = "0.12.3"
prost-types = "0.12.3"
rayon = "1.8.1"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
scarb = { git = "https://github.com/software-mansion/scarb.git", version = "2.4.2" }
scarb-metadata = "1.10.0"
scarb-ui = "0.1.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
starknet-types-core = "0.0.7"
tempfile = "3.9.0"
thiserror = "1.0.56"
which = "6.0.0"
