[workspace]
resolver = "2"
members = [
    "cairo-lang-hints-test-runner",
    "cairo-proto-serde",
    "cairo-proto-build",
    "cairo-oracle-hint-processor",
    "cairo-hints",
]
exclude = ["examples/rust_complex/rust", "examples/rust_sqrt/rust"]

[workspace.package]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/reilabs/cairo-hints/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.79"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }
bytes = "1.5.0"
cairo-lang-casm = { version = "2.7.0" }
cairo-lang-compiler = { version = "2.7.0" }
cairo-lang-filesystem = { version = "2.7.0" }
cairo-lang-runner = { version = "2.7.0" }
cairo-lang-sierra = { version = "2.7.0" }
cairo-lang-sierra-ap-change = { version = "2.7.0", default-features = false }
cairo-lang-sierra-gas = { version = "2.7.0", default-features = false }
cairo-lang-sierra-to-casm = { version = "2.7.0" }
cairo-lang-sierra-generator = { version = "2.7.0" }
cairo-lang-sierra-type-size = { version = "2.7.0", default-features = false }
cairo-lang-starknet = { version = "2.7.0" }
cairo-lang-hints-test-runner = { path = "./cairo-lang-hints-test-runner", version = "0.1.0" }
cairo-lang-test-plugin = { version = "2.7.0" }
cairo-lang-utils = { version = "2.7.0" }
cairo-oracle-hint-processor = { path = "./cairo-oracle-hint-processor", version = "0.1.0" }
cairo-proto-build = { path = "./cairo-proto-build", default-features = false, version = "0.1.0" }
cairo-proto-serde = { path = "./cairo-proto-serde", version = "0.1.0" }
cairo-felt = "0.9.1"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "v1.0.0", features = [
    "std",
    "cairo-1-hints",
] }
cainome-cairo-serde = {git = "https://github.com/cartridge-gg/cainome.git", rev = "0d29bb0"}
camino = "1.1.6"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.1.0"
dunce = "1"
env_logger = "0.10.1"
heck = "0.4.1"
indoc = "2.0.4"
itertools = "0.12.0"
log = "0.4.20"
multimap = "0.10.0"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
once_cell = "1"
petgraph = "0.6.4"
prost = "0.12.3"
prost-types = "0.12.3"
rayon = "1.8.1"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
scarb = { git = "https://github.com/software-mansion/scarb.git", rev = "v2.7.0" }
scarb-metadata = "1.12.0"
scarb-ui = "0.1.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
starknet-types-core = "0.0.7"
tempfile = "3.9.0"
thiserror = "1.0.40"
which = "6.0.0"