[package]
name = "cairo-lang-hints-test-runner"
version.workspace = true
edition.workspace = true
description = "Cairo tests runner. Used to run tests written in Cairo."

[dependencies]
anyhow = { workspace = true }
cairo-lang-compiler = { workspace = true }
cairo-lang-filesystem = { workspace = true }
cairo-lang-runner = { workspace = true }
cairo-lang-sierra = { workspace = true }
cairo-lang-sierra-to-casm = { workspace = true }
cairo-lang-sierra-generator = { workspace = true }
cairo-lang-starknet = { workspace = true }
cairo-lang-test-plugin = { workspace = true }
cairo-lang-utils = { workspace = true }
cairo-oracle-hint-processor = { workspace = true }
cairo-proto-serde = { workspace = true }
cairo-vm = { workspace = true }
cairo-felt = { workspace = true }
colored = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
serde_json = "1.0.113"
