[package]
name = "cairo-oracle-hint-processor"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
cairo-lang-casm = { workspace = true }
cairo-lang-sierra = { workspace = true }
cairo-lang-sierra-to-casm = { workspace = true }
cairo-lang-sierra-type-size = { workspace = true }
cairo-lang-sierra-ap-change = { workspace = true }
cairo-lang-sierra-gas = { workspace = true }
cairo-lang-runner = { workspace = true }
cairo-lang-utils = { workspace = true }
cairo-oracle = { workspace = true }
cairo-proto-serde = { workspace = true }
cairo-vm = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
reqwest = { workspace = true }
scarb-metadata = { workspace = true }
scarb-ui = { workspace = true }
starknet-types-core = { workspace = true }
thiserror = { workspace = true }