[package]
name = "cairo-oracle"
version.workspace = true
edition.workspace = true

[dependencies]
cairo-proto-serde = { workspace = true }
starknet-types-core = { workspace = true }
reqwest = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
