[package]
name = "cairo-proto-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
heck = "0.4.1"
itertools = "0.12.0"
log = "0.4.20"
multimap = "0.10.0"
petgraph = "0.6.4"
prost = "0.12.3"
prost-types = "0.12.3"
tempfile = "3.9.0"
which = "6.0.0"
