[package]
name = "cairo-proto-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
cairo-proto-serde = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
multimap = { workspace = true }
petgraph = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }