[package]
name = "cairo-proto-build"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
cairo-proto-serde = { workspace = true }
heck = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
multimap = { workspace = true }
petgraph = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[features]
cleanup-markdown = []
format = []