[package]
name = "cairo-proto-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-felt = "0.8.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
num-traits = "0.2"
cairo-lang-runner = "2.4.4"