[package]
name = "cairo-proto-serde"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Definitions of Protocol Buffer types supported by Cairo."

[dependencies]
cairo-lang-runner = { workspace = true }
cairo-vm = { workspace = true }
num-traits = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
