[package]
name = "scarb-hints-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cairo-felt = "0.8.7"
cairo-lang-runner = "=2.4.3"
cairo-lang-sierra = "=2.4.3"
camino = "1.1.6"
clap = "4.4.18"
indoc = "2.0.4"
num-bigint = "0.4.4"
scarb-metadata = "1.10.0"
scarb-ui = "0.1.2"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
