[package]
name = "scarb-hints-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
cairo-felt = { workspace = true }
cairo-lang-runner = { workspace = true }
cairo-lang-sierra = { workspace = true }
cairo-lang-sierra-to-casm = { workspace = true }
cairo-oracle-hint-processor = { workspace = true }
cairo-proto-serde = { workspace = true }
cairo-vm = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
scarb-metadata = { workspace = true }
scarb-ui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }