[package]
name = "scarb-hints-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cairo-felt = "0.8.7"
cairo-lang-runner = "2.4.4"
cairo-lang-sierra = "2.4.4"
cairo-lang-sierra-to-casm = "2.4.4"
cairo-lang-test-plugin = "2.4.4"
cairo-lang-test-runner = { path = "../../cairo/crates/cairo-lang-test-runner" }
cairo-vm = "0.8.4-rc.0"
camino = "1.1.6"
clap = "4.4.18"
indoc = "2.0.4"
itertools = "0.12.0"
num-bigint = "0.4.4"
scarb-metadata = "1.10.0"
scarb-ui = "0.1.2"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
cairo-oracle-hint-processor = { path = "../cairo-oracle-hint-processor" }